Quick fix for empty custom-control-label alignment issue

--- a/scss/_custom-forms.scss
+++ b/scss/_custom-forms.scss
@@ -69,6 +69,7 @@
 .custom-control-label {
   position: relative;
   margin-bottom: 0;
+  vertical-align: top;
 
   // Background-color and (when enabled) gradient
   &::before {
